Add Unit Test Env

--- a/cherrypy/conf/root.conf
+++ b/cherrypy/conf/root.conf
@@ -22,6 +22,12 @@
 	tools.staticdir.dir: 'www/plugin/date_picker'
 	tools.staticdir.index: 'index.html'	
 	
+	
+'/test':
+	tools.staticdir.on: True
+	tools.staticdir.dir: 'www'
+	tools.staticdir.index: 'persian_date_test.html'	
+	
 
 
 	
