--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//www/js/persian.date.js=UTF-8
+encoding//www/plugin/date_picker/js/persianDatepicker.js=UTF-8
+encoding/www=UTF-8
