--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-.svn/;.svn;.DS_Store;.project
-/cherrypy
-/.externalToolBuilders
-/.settings
-.settings/
-.externalToolBuilders/
-.DS_Store
-.project
-.pydevproject
-build.xml
+.svn/;.svn;.DS_Store;.project;
+/cherrypy;
+/.externalToolBuilders;
+/.settings;
+.DS_Store;
+.project;
+.pydevproject;
+build.xml;
