--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,7 @@
 eclipse.preferences.version=1
 encoding//jade/includes/persiandate.doc.html=UTF-8
+encoding//js/pwt.date.js=UTF-8
+encoding//js/pwt.datepicker.js=UTF-8
+encoding/datepicker.html=UTF-8
+encoding/js=UTF-8
 encoding/www=UTF-8
