--- a/cherrypy/conf/root.conf
+++ b/cherrypy/conf/root.conf
@@ -5,29 +5,10 @@
 
 '/':
 	tools.staticdir.on: True
-	tools.staticdir.dir: 'www'
+	tools.staticdir.dir: '/'
 	tools.staticdir.index: 'index.html'
 	tools.gzip.mime_types: ['text/html', 'text/plain', 'text/javascript', 'text/css', 'application/x-javascript']
 
-	
-	
-'/calendar':
-	tools.staticdir.on: True
-	tools.staticdir.dir: 'www/plugin/calendar'
-	tools.staticdir.index: 'index.html'
-	
-	
-'/datePicker':
-	tools.staticdir.on: True
-	tools.staticdir.dir: 'www/plugin/date_picker'
-	tools.staticdir.index: 'index.html'	
-	
-	
-'/test':
-	tools.staticdir.on: True
-	tools.staticdir.dir: 'www'
-	tools.staticdir.index: 'persian_date_test.html'	
-	
 
 
 	
