--- a/cherrypy/conf/root.conf
+++ b/cherrypy/conf/root.conf
@@ -5,7 +5,7 @@
 
 '/':
 	tools.staticdir.on: True
-	tools.staticdir.dir: '/'
+	tools.staticdir.dir: ''
 	tools.staticdir.index: 'index.html'
 	tools.gzip.mime_types: ['text/html', 'text/plain', 'text/javascript', 'text/css', 'application/x-javascript']
 
