Fix page logo link

--- a/cherrypy/conf/root.conf
+++ b/cherrypy/conf/root.conf
@@ -9,6 +9,9 @@
 	tools.staticdir.index: 'index.html'
 	tools.gzip.mime_types: ['text/html', 'text/plain', 'text/javascript', 'text/css', 'application/x-javascript']
 
-
+'/PersianWebToolkit':
+	tools.staticdir.on: True
+	tools.staticdir.dir: ''
+	tools.gzip.mime_types: ['text/html', 'text/plain', 'text/javascript', 'text/css', 'application/x-javascript']
 
 	
