Add index.html to doc root

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
 
 .DS_Store
-.settings
-node_modules
+
+.project
+
+.pydevproject
+.gitignore
 *.prefs
+.project
+
+js/pwt.datepicker.html
+.settings
+js/pwt.datepicker.jade
+
+bower_components
 .idea
+node_modules
+.sass-cache
+old-js
