--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,8 @@ site_author:        babakhani.reza@gmail.com
 copyright:          license http://www.wtfpl.net/
 remote_branch: 'gh-pages'
 docs_dir: 'src'
-site_dir: 'docs'
-site_url: 'http://babakhani.github.io/PersianWebToolkit/docs/'
+site_dir: 'beta'
+site_url: 'http://babakhani.github.io/PersianWebToolkit/beta/'
 repo_name: 'GitHub'
 strict: true
 
