--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "mkdocs serve",
-    "pre-dev": "sudo npm install -g mkdocs",
+    "pre-dev": "npm install -g mkdocs",
     "dev": "babel --watch src/es6 --out-file src/.tmp/persian-datepicker.js & simple-server 3000 & grunt --force --dev &",
     "lint": "sass-lint -c .sass-lint.yml --verbose & ./node_modules/jshint/bin/jshint src/es6/*.js",
     "doc": "grunt --doc",
